# missionguard-ai

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  turbo.json
apps/api/: .env.example  pyproject.toml
apps/api/migrations/: env.py
apps/api/missionguard_api/: __init__.py  main.py  models.py  schemas.py
apps/api/missionguard_api/core/: __init__.py  config.py  database.py  security.py
apps/api/missionguard_api/routers/: __init__.py  gifts.py  health.py  policies.py
apps/api/tests/: conftest.py  test_routes.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analyze/[giftId]/: page.tsx
apps/web/src/app/decisions/[giftId]/: page.tsx
apps/web/src/app/home/: page.tsx
apps/web/src/components/home/: AmbientParticles.tsx  CTATile.tsx  CaseStudyTile.tsx  Globe.tsx  HeroTile.tsx  HowItWorksTile.tsx  KPITile.tsx  LensesTile.tsx  MapTile.tsx  PersonasTile.tsx  RoadmapTile.tsx
apps/web/src/components/ui/: progress.tsx  score-ring.tsx
apps/web/src/lib/: api.ts
design/: DESIGN (1).md  DESIGN (2).md
docs/: CLAUDE_MANAGED_AGENTS.md  MissionGuard_AI_Development_Plan.docx  MissionGuard_AI_Development_Plan.md  MissionGuard_AI_Ethical_Framework_for_AI_Agents.docx  MissionGuard_AI_Ethical_Framework_for_AI_Agents.md  MissionGuard_AI_PRD.md  MissionGuard_AI_Repository_Analysis.md
samples/: donor_aurora_foundation.html  donor_helix_capital.html  donor_pyrrhus_holdings.html  donor_sierra_meridian_PENDING.html  donor_techbridge_PENDING.html  donor_vantage_trust_PENDING.html
